--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -1109,9 +1109,12 @@ br {
   }
 
   .tab-wrap {
+    margin: 0;
+    padding: 0;
+
     .tab-item {
       margin-right: 16px;
-      min-width: 240px;
+      min-width: 21%;
       display: inline-block;
       padding: 24px 24px 20px 20px;
       background-color: @gray200;
@@ -1119,11 +1122,9 @@ br {
       position: relative;
       cursor: pointer;
 
-      .tab-item-icon {
-        width: 24px;
-        height: 24px;
+      img {
         margin-right: 4px;
-        .background-no-repeat;
+        vertical-align: middle;
       }
 
       .tab-item-icon,
@@ -1265,8 +1266,9 @@ br {
 
     .tab-item {
       display: inline-block;
-      width: 250px;
+      width: 100%;
       margin-right: 8px;
+      margin-bottom: 12px;
       padding: 16px 14px 14px 14px;
       background-color: @gray200;
       border-radius: 6px;
