--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -2223,47 +2223,6 @@ section.press-releases {
 .nav-mobile-full-screen {
   display: none;
 }
-.sofia {
-  font-family: 'Sofia Pro', sans-serif;
-  letter-spacing: -0.005em;
-}
-.acumin {
-  font-family: 'Acumin Pro', sans-serif;
-}
-.background-no-repeat {
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
-.text-center {
-  text-align: center;
-}
-.box-shadow {
-  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-}
-.box-shadow-none {
-  -webkit-box-shadow: 0 !important;
-  -moz-box-shadow: 0 !important;
-  box-shadow: 0 !important;
-}
-.transition {
-  transition: all 0.5s;
-}
-.icon {
-  width: 48px;
-  height: 48px;
-  margin-top: 4px;
-  margin-right: 12px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-}
-.body-illustration {
-  height: 300px;
-  background-size: auto 100%;
-}
 @media only screen and (max-width: 813px) {
   .container-fluid {
     width: 100%;
@@ -2575,6 +2534,70 @@ section.press-releases {
   .block-lists .wrap-item .paragraph .btn-more {
     display: block;
     margin: 0 auto;
+  }
+  .block span.icon-section {
+    margin-bottom: 0;
+  }
+  .block .block-description {
+    width: 100%;
+  }
+  .company-about-status .block-column {
+    display: block;
+    width: 270px;
+    margin: 0 auto 16px auto;
+    padding: 0;
+    border-right: 0;
+    border-bottom: 1px solid #ECEDEF;
+  }
+  .company-about-status .block-column:last-of-type {
+    border-bottom: 0;
+    margin: 0 auto;
+  }
+  .company-offices .wrap-office {
+    margin-top: 0;
+    margin-bottom: 16px;
+  }
+  .il-index-locations {
+    width: 100%;
+    height: 240px;
+    background-size: 100%;
+    background-image: url('../images/il-index-locations-mobile.png');
+  }
+  .team-value .wrap-value:last-of-type {
+    margin-bottom: 18px;
+  }
+  .team-value .wrap-value-left {
+    margin-top: 0;
+  }
+  .company-benefit .block-column {
+    margin: 0;
+  }
+  .philosophy {
+    height: auto;
+  }
+  .philosophy .photo {
+    display: block;
+    width: 100%;
+    height: 200px;
+    left: auto;
+    position: relative;
+  }
+  .philosophy .description {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0 24px;
+  }
+  .philosophy .description .paragraph {
+    font-size: 1.2em;
+  }
+  .philosophy .description .author {
+    margin: 0;
+    padding: 0 0 48px 0;
+    text-align: right;
+  }
+  .job-opening .job-opening-list .job-table .show-more {
+    margin-top: 3px;
   }
   .intercom {
     display: none;
