--- a/embold-blue.com/css/media-query.css
+++ b/embold-blue.com/css/media-query.css
@@ -351,6 +351,64 @@
     display: block;
     margin: 0 auto;
   }
+  .block span.icon-section {
+    margin-bottom: 0;
+  }
+  .block .block-description {
+    width: 100%;
+  }
+  .company-about-status .block-column {
+    display: block;
+    width: 270px;
+    margin: 0 auto 16px auto;
+    padding: 0;
+    border-right: 0;
+    border-bottom: 1px solid #ECEDEF;
+  }
+  .company-about-status .block-column:last-of-type {
+    border-bottom: 0;
+    margin: 0 auto;
+  }
+  .company-offices .wrap-office {
+    margin-top: 0;
+    margin-bottom: 16px;
+  }
+  .team-value .wrap-value:last-of-type {
+    margin-bottom: 18px;
+  }
+  .team-value .wrap-value-left {
+    margin-top: 0;
+  }
+  .company-benefit .block-column {
+    margin: 0;
+  }
+  .philosophy {
+    height: auto;
+  }
+  .philosophy .photo {
+    display: block;
+    width: 100%;
+    height: 200px;
+    left: auto;
+    position: relative;
+  }
+  .philosophy .description {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0 24px;
+  }
+  .philosophy .description .paragraph {
+    font-size: 1.2em;
+  }
+  .philosophy .description .author {
+    margin: 0;
+    padding: 0 0 48px 0;
+    text-align: right;
+  }
+  .job-opening .job-opening-list .job-table .show-more {
+    margin-top: 3px;
+  }
   .intercom {
     display: none;
   }
