--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -2557,6 +2557,21 @@ section.press-releases {
     margin-top: 0;
     margin-bottom: 16px;
   }
+  .team .member-big .member-photo {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 16px auto;
+    border-radius: 100px;
+    float: none;
+  }
+  .team .member-big .member-detail {
+    padding-left: 0;
+  }
+  .team .member-big .member-detail .name,
+  .team .member-big .member-detail .role,
+  .team .member-big .member-detail .member-sns {
+    text-align: center;
+  }
   .il-index-locations {
     width: 100%;
     height: 240px;
@@ -2598,6 +2613,45 @@ section.press-releases {
   }
   .job-opening .job-opening-list .job-table .show-more {
     margin-top: 3px;
+  }
+  body.company-news .header-sub-title-simple {
+    padding-top: 0;
+    padding-bottom: 48px;
+  }
+  section.company-news .block-input {
+    padding-right: 0;
+  }
+  section.company-news .block-input .input-title {
+    display: block;
+  }
+  section.company-news .block-input .wrap-checkbox-item {
+    margin-left: 0;
+    margin-bottom: 8px;
+  }
+  section.company-news .block-input .block-btn {
+    margin: 0 auto;
+    position: relative;
+    top: auto;
+    left: auto;
+    text-align: center;
+  }
+  section.press-releases .block-input,
+  section.company-news .block-input {
+    padding-right: 0;
+  }
+  .modal-subscribe .wrap-policy {
+    padding-left: 0;
+  }
+  .input-dropdown {
+    width: auto;
+    height: auto;
+    margin-top: 8px;
+  }
+  .press-releases-table td.photo,
+  .company-news-table td.photo,
+  .press-releases-table td.btn,
+  .company-news-table td.btn {
+    display: none;
   }
   .intercom {
     display: none;
