--- a/embold-blue.com/css/media-query.less
+++ b/embold-blue.com/css/media-query.less
@@ -410,6 +410,28 @@
     }
   }
 
+  .team {
+    .member-big {
+      .member-photo {
+        width: 200px;
+        height: 200px;
+        margin: 0 auto 16px auto;
+        border-radius: 100px;
+        float: none;
+      }
+
+      .member-detail {
+        padding-left: 0;
+
+        .name,
+        .role,
+        .member-sns {
+          text-align: center;
+        }
+      }
+    }
+  }
+
   .il-index-locations {
     width: 100%;
     height: 240px;
@@ -464,6 +486,59 @@
 
   .job-opening .job-opening-list .job-table .show-more {
     margin-top: 3px;
+  }
+
+  body.company-news {
+    .header-sub-title-simple {
+      padding-top: 0;
+      padding-bottom: 48px;
+    }
+  }
+
+  section.company-news {
+    .block-input {
+      padding-right: 0;
+
+      .input-title {
+        display: block;
+      }
+
+      .wrap-checkbox-item {
+        margin-left: 0;
+        margin-bottom: 8px;
+      }
+
+      .block-btn {
+        margin: 0 auto;
+        position: relative;
+        top: auto;
+        left: auto;
+        text-align: center;
+      }
+    }
+  }
+
+  section.press-releases .block-input,
+  section.company-news .block-input {
+    padding-right: 0;
+  }
+
+  .modal-subscribe .wrap-policy {
+    padding-left: 0;
+  }
+
+  .input-dropdown {
+    width: auto;
+    height: auto;
+    margin-top: 8px;
+  }
+
+  .press-releases-table,
+  .company-news-table {
+    td.photo,
+    td.btn {
+      display: none;
+    }
   }
 
   .intercom {
