--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -1117,7 +1117,7 @@ br {
     padding: 0;
 
     .tab-item {
-      margin-right: 16px;
+      margin-right: 2%;
       margin-bottom: 12px;
       min-width: 21%;
       display: inline-block;
@@ -1521,19 +1521,17 @@ br {
     width: 100%;
     overflow: scroll;
     overflow-y: hidden;
-    border-top: 1px solid @gray400;
     margin-top: 2.4em;
     padding-top: 2.4em;
     padding-bottom: 1em;
 
     .content-timeline {
-      width: 2700px;
-      height: 480px;
+      width: 1600px;
+      height: 510px;
       background-image: url('../images/timeline-sample.svg');
-      background-size: 50%;
-      background-position: left bottom;
       background-repeat: no-repeat;
       .background-no-repeat;
+      background-size: auto 100%;
     }
   }
 
