--- a/embold-blue.com/css/icons.less
+++ b/embold-blue.com/css/icons.less
@@ -49,10 +49,10 @@
 .bg-product-pricing { background-image: url('../images/header-sub-product-pricing.svg'); }
 .bg-product-partnership { background-image: url('../images/header-sub-product-partnership.svg'); }
 
-.bg-user-stories-user-roles { background-image: url('../images/header-sub-user-stories-user-roles.svg'); }
-.bg-user-stories-team-size { background-image: url('../images/header-sub-user-stories-team-size.svg'); }
-.bg-user-stories-industry { background-image: url('../images/header-sub-user-stories-industry.png'); }
-.bg-user-stories-solution-approach { background-image: url('../images/header-sub-user-stories-solution-approach.svg'); }
+.bg-user-stories-user-roles { background-image: url('../images/header-sub-solutions-user-roles.svg'); }
+.bg-user-stories-team-size { background-image: url('../images/header-sub-solutions-team-size.svg'); }
+.bg-user-stories-industry { background-image: url('../images/header-sub-solutions-industry.png'); }
+.bg-user-stories-solution-approach { background-image: url('../images/header-sub-solutions-solution-approach.svg'); }
 .bg-solutions-solution-approach { background-image: url('../images/header-sub-solutions-solution-approach.png'); }
 
 .bg-resources-product { background-image: url('../images/header-sub-resources-product.svg'); }
@@ -60,7 +60,7 @@
 .bg-resources-media { background-image: url('../images/header-sub-resources-media.svg'); }
 
 .bg-company-about { background-image: url('../images/header-sub-company-about.svg'); }
-.bg-company-team { background-image: url('../images/header-sub-company-team.svg'); }
+.bg-company-team { background-image: url('../images/header-sub-company-team.png'); }
 .bg-company-careers { background-image: url('../images/header-sub-company-careers.svg'); }
 .bg-company-news { background-image: url('../images/header-sub-company-news.svg'); }
 
