--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -215,16 +215,16 @@
   background-image: url('../images/header-sub-product-partnership.svg');
 }
 .bg-user-stories-user-roles {
-  background-image: url('../images/header-sub-user-stories-user-roles.svg');
+  background-image: url('../images/header-sub-solutions-user-roles.svg');
 }
 .bg-user-stories-team-size {
-  background-image: url('../images/header-sub-user-stories-team-size.svg');
+  background-image: url('../images/header-sub-solutions-team-size.svg');
 }
 .bg-user-stories-industry {
-  background-image: url('../images/header-sub-user-stories-industry.png');
+  background-image: url('../images/header-sub-solutions-industry.png');
 }
 .bg-user-stories-solution-approach {
-  background-image: url('../images/header-sub-user-stories-solution-approach.svg');
+  background-image: url('../images/header-sub-solutions-solution-approach.svg');
 }
 .bg-solutions-solution-approach {
   background-image: url('../images/header-sub-solutions-solution-approach.png');
@@ -242,7 +242,7 @@
   background-image: url('../images/header-sub-company-about.svg');
 }
 .bg-company-team {
-  background-image: url('../images/header-sub-company-team.svg');
+  background-image: url('../images/header-sub-company-team.png');
 }
 .bg-company-careers {
   background-image: url('../images/header-sub-company-careers.svg');
@@ -1523,7 +1523,7 @@ br {
   padding: 0;
 }
 .tab-role .tab-wrap .tab-item {
-  margin-right: 16px;
+  margin-right: 2%;
   margin-bottom: 12px;
   min-width: 21%;
   display: inline-block;
@@ -1893,20 +1893,18 @@ br {
   width: 100%;
   overflow: scroll;
   overflow-y: hidden;
-  border-top: 1px solid #E2E5EB;
   margin-top: 2.4em;
   padding-top: 2.4em;
   padding-bottom: 1em;
 }
 .timeline .wrap-timeline .content-timeline {
-  width: 2700px;
-  height: 480px;
+  width: 1600px;
+  height: 510px;
   background-image: url('../images/timeline-sample.svg');
-  background-size: 50%;
-  background-position: left bottom;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  background-size: auto 100%;
 }
 .timeline ::-webkit-scrollbar {
   width: 0;
