--- a/embold-blue.com/css/icons.less
+++ b/embold-blue.com/css/icons.less
@@ -77,8 +77,8 @@
 
 .photo-vishal-rai-big { background-image: url('../images/photo-vishal-rai-big.jpg'); }
 .photo-developer-1 { background-image: url('../images/photo-developer-1.png'); }
-.photo-dev-ops-1 { background-image: url('../images/photo-devOps-1.png'); }
-.photo-manager-1 { background-image: url('../images/photo-manager-1.png'); }
+.photo-architect-1 { background-image: url('../images/photo-architect-1.png'); }
+.photo-product-manager-1 { background-image: url('../images/photo-product-manager-1.png'); }
 .photo-member-vishal { background-image: url('../images/photo-member-vishal.png'); }
 .photo-company-team-value-1 { background-image: url('../images/photo-company-careers-team-value-1.jpg'); }
 .photo-company-team-value-2 { background-image: url('../images/photo-company-careers-team-value-2.jpg'); }
