--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -283,11 +283,11 @@
 .photo-developer-1 {
   background-image: url('../images/photo-developer-1.png');
 }
-.photo-dev-ops-1 {
-  background-image: url('../images/photo-devOps-1.png');
+.photo-architect-1 {
+  background-image: url('../images/photo-architect-1.png');
 }
-.photo-manager-1 {
-  background-image: url('../images/photo-manager-1.png');
+.photo-product-manager-1 {
+  background-image: url('../images/photo-product-manager-1.png');
 }
 .photo-member-vishal {
   background-image: url('../images/photo-member-vishal.png');
@@ -637,6 +637,9 @@
   color: #fff;
   background-color: #21ABB0;
 }
+.bg-orange h2 {
+  color: #fff;
+}
 .bg-orange h4 {
   color: #fff;
 }
@@ -760,9 +763,10 @@ button:focus {
 }
 * {
   box-sizing: border-box;
+  line-height: 1.8;
 }
 body {
-  color: #2A3141;
+  color: #7C808B;
   font-family: 'Acumin Pro', sans-serif;
   font-size: 13px;
   font-weight: normal;
@@ -773,11 +777,15 @@ a {
   text-decoration: none;
 }
 h2 {
+  color: #2A3141;
   font-size: 3rem;
   font-family: 'Sofia Pro', sans-serif;
   margin: 8px 0 24px 0;
   line-height: 1.2;
   letter-spacing: -0.025em;
+}
+h3 {
+  color: #2A3141;
 }
 h4 {
   color: #7C808B;
@@ -800,6 +808,7 @@ nav .nav-wrap-items {
   width: 150px;
 }
 nav .nav-wrap-items .nav-item-main {
+  color: #2A3141;
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
@@ -1109,6 +1118,7 @@ br {
   text-align: center;
 }
 .block-index-hero .wrap-hero-content h1.headcopy {
+  color: #2A3141;
   margin: 0;
   padding: 0;
   font-size: 4em;
@@ -1146,7 +1156,7 @@ br {
 }
 .block-index-partnership .partnership-review .paragraph {
   color: #7C808B;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 300;
 }
 .block-index-partnership .partnership-review .name {
@@ -1188,8 +1198,8 @@ br {
   padding: 1.6em;
   background-color: #fff;
   background-repeat: no-repeat;
-  background-position: right -3px bottom;
-  background-size: 50%;
+  background-position: right -12px bottom -24px;
+  background-size: 68%;
   -webkit-filter: grayscale(1);
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
@@ -1458,6 +1468,7 @@ br {
   position: relative;
 }
 .block-header-sub .header-sub-title {
+  color: #2A3141;
   margin-top: 80px;
   font-family: 'Sofia Pro', sans-serif;
   font-size: 3em;
@@ -1649,21 +1660,28 @@ br {
   color: #21ABB0;
   text-align: left;
 }
-.block-user-story .wrap-content p,
-.block-user-story .wrap-content .paragraph {
-  color: #A8ACB4;
+.block-user-story .wrap-content .paragraph-use-cases,
+.block-user-story .wrap-content .paragraph-use-cases p {
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.8;
+  margin: 2em 0;
+}
+.block-user-story .wrap-content .paragraph-use-cases strong,
+.block-user-story .wrap-content .paragraph-use-cases p strong {
+  color: #2A3141;
 }
 .block-user-story .wrap-content-alt {
   margin-top: 0;
+}
+.block-user-story .wrap-content-alt .wrap-use-case-body {
+  display: none;
 }
 .block-user-story .headcopy {
   color: #21ABB0;
   font-size: 36px;
   font-weight: bold;
-  line-height: 1;
+  line-height: 1.3;
   margin-top: 0;
   font-family: 'Sofia Pro', sans-serif;
   letter-spacing: -0.005em;
