--- a/embold-blue.com/css/icons.less
+++ b/embold-blue.com/css/icons.less
@@ -45,11 +45,11 @@
 .bg-index-hero { background-image: url('../images/header-index-hero.png'); }
 .bg-product-overview { background-image: url('../images/header-sub-product-overview.png'); }
 .bg-product-features { background-image: url('../images/header-sub-product-features.svg'); }
-.bg-product-use-cases { background-image: url('../images/header-sub-product-use-cases.svg'); }
+.bg-product-use-cases { background-image: url('../images/header-sub-product-use-cases.png'); }
 .bg-product-pricing { background-image: url('../images/header-sub-product-pricing.svg'); }
 .bg-product-partnership { background-image: url('../images/header-sub-product-partnership.svg'); }
 
-.bg-user-stories-user-roles { background-image: url('../images/header-sub-solutions-user-roles.svg'); }
+.bg-user-stories-user-roles { background-image: url('../images/header-sub-solutions-user-roles.png'); }
 .bg-user-stories-team-size { background-image: url('../images/header-sub-solutions-team-size.svg'); }
 .bg-user-stories-industry { background-image: url('../images/header-sub-solutions-industry.png'); }
 .bg-user-stories-solution-approach { background-image: url('../images/header-sub-solutions-solution-approach.svg'); }
