--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -206,7 +206,7 @@
   background-image: url('../images/header-sub-product-features.svg');
 }
 .bg-product-use-cases {
-  background-image: url('../images/header-sub-product-use-cases.svg');
+  background-image: url('../images/header-sub-product-use-cases.png');
 }
 .bg-product-pricing {
   background-image: url('../images/header-sub-product-pricing.svg');
@@ -215,7 +215,7 @@
   background-image: url('../images/header-sub-product-partnership.svg');
 }
 .bg-user-stories-user-roles {
-  background-image: url('../images/header-sub-solutions-user-roles.svg');
+  background-image: url('../images/header-sub-solutions-user-roles.png');
 }
 .bg-user-stories-team-size {
   background-image: url('../images/header-sub-solutions-team-size.svg');
@@ -795,7 +795,7 @@ h4 {
   text-transform: uppercase;
 }
 nav {
-  height: 56px;
+  height: 54px;
   padding: 0 0 7px 0;
   font-size: 14px;
   position: fixed;
@@ -851,7 +851,7 @@ br {
 .nav-grid .nav-wrap-items .active {
   color: #111317;
   margin-top: 0;
-  padding: 14px 12px 15px 10px;
+  padding: 15px 12px 9px 10px;
   background-color: #ECEDEF;
 }
 .nav-grid .nav-wrap-items .active-menu {
@@ -874,9 +874,9 @@ br {
 .nav-sub {
   display: none;
   position: fixed;
-  top: 56px;
+  top: 54px;
   background-color: #ECEDEF;
-  border-bottom: 4px solid #21ABB0;
+  border-bottom: 2px solid #21ABB0;
   z-index: 998;
   -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
@@ -1534,6 +1534,7 @@ br {
   padding: 0;
 }
 .tab-role .tab-wrap .tab-item {
+  color: #2A3141;
   margin-right: 2%;
   margin-bottom: 12px;
   min-width: 21%;
@@ -1614,7 +1615,7 @@ br {
   display: none;
   color: #fff;
   position: fixed;
-  top: 56px;
+  top: 54px;
   width: 100%;
   height: 58px;
   padding-top: 0.5em;
