--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -278,7 +278,7 @@ h4 {
 }
 
 nav {
-  height: 56px;
+  height: 54px;
   padding: 0 0 7px 0;
   font-size: 14px;
   position: fixed;
@@ -342,7 +342,7 @@ br {
     .active {
       color: @gray900;
       margin-top: 0;
-      padding: 14px 12px 15px 10px;
+      padding: 15px 12px 9px 10px;
       background-color: @gray300;
     }
 
@@ -374,9 +374,9 @@ br {
 .nav-sub {
   display:none;
   position: fixed;
-  top: 56px;
+  top: 54px;
   background-color: @gray300;
-  border-bottom: 4px solid @blue800;
+  border-bottom: 2px solid @blue800;
   z-index: 998;
   .box-shadow;
 
@@ -1130,6 +1130,7 @@ br {
     padding: 0;
 
     .tab-item {
+      color: @gray800;
       margin-right: 2%;
       margin-bottom: 12px;
       min-width: 21%;
@@ -1210,7 +1211,7 @@ br {
   display: none;
   color: @white;
   position: fixed;
-  top: 56px;
+  top: 54px;
   width: 100%;
   height: 58px;
   padding-top: 0.5em;
