--- a/embold-blue.com/css/icons.less
+++ b/embold-blue.com/css/icons.less
@@ -6,12 +6,12 @@
 .ic-sm-user-architect-wh  { background-image: url('../images/ic-sm-user-architect-wh.svg'); }
 .ic-sm-user-pm            { background-image: url('../images/ic-sm-user-pm.svg'); }
 .ic-sm-user-pm-wh         { background-image: url('../images/ic-sm-user-pm-wh.svg'); }
-.ic-sm-builind-big        { background-image: url('../images/ic-sm-builind-big.svg'); }
-.ic-sm-builind-medium     { background-image: url('../images/ic-sm-builind-medium.svg'); }
-.ic-sm-builind-small      { background-image: url('../images/ic-sm-builind-small.svg'); }
-.ic-sm-builind-big-wh     { background-image: url('../images/ic-sm-builind-big-wh.svg'); }
-.ic-sm-builind-medium-wh  { background-image: url('../images/ic-sm-builind-medium-wh.svg'); }
-.ic-sm-builind-small-wh   { background-image: url('../images/ic-sm-builind-small-wh.svg'); }
+.ic-sm-building-big       { background-image: url('../images/ic-sm-building-big.svg'); }
+.ic-sm-building-medium    { background-image: url('../images/ic-sm-building-medium.svg'); }
+.ic-sm-building-small     { background-image: url('../images/ic-sm-building-small.svg'); }
+.ic-sm-building-big-wh    { background-image: url('../images/ic-sm-building-big-wh.svg'); }
+.ic-sm-building-medium-wh { background-image: url('../images/ic-sm-building-medium-wh.svg'); }
+.ic-sm-building-small-wh  { background-image: url('../images/ic-sm-building-small-wh.svg'); }
 .ic-sm-copy               { background-image: url('../images/ic-sm-copy.svg'); }
 
 .ic-door-open             { background-image: url('../images/ic-md-door-open.svg'); }
