--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -103,23 +103,23 @@
 .ic-sm-user-pm-wh {
   background-image: url('../images/ic-sm-user-pm-wh.svg');
 }
-.ic-sm-builind-big {
-  background-image: url('../images/ic-sm-builind-big.svg');
+.ic-sm-building-big {
+  background-image: url('../images/ic-sm-building-big.svg');
 }
-.ic-sm-builind-medium {
-  background-image: url('../images/ic-sm-builind-medium.svg');
+.ic-sm-building-medium {
+  background-image: url('../images/ic-sm-building-medium.svg');
 }
-.ic-sm-builind-small {
-  background-image: url('../images/ic-sm-builind-small.svg');
+.ic-sm-building-small {
+  background-image: url('../images/ic-sm-building-small.svg');
 }
-.ic-sm-builind-big-wh {
-  background-image: url('../images/ic-sm-builind-big-wh.svg');
+.ic-sm-building-big-wh {
+  background-image: url('../images/ic-sm-building-big-wh.svg');
 }
-.ic-sm-builind-medium-wh {
-  background-image: url('../images/ic-sm-builind-medium-wh.svg');
+.ic-sm-building-medium-wh {
+  background-image: url('../images/ic-sm-building-medium-wh.svg');
 }
-.ic-sm-builind-small-wh {
-  background-image: url('../images/ic-sm-builind-small-wh.svg');
+.ic-sm-building-small-wh {
+  background-image: url('../images/ic-sm-building-small-wh.svg');
 }
 .ic-sm-copy {
   background-image: url('../images/ic-sm-copy.svg');
@@ -1555,7 +1555,7 @@ br {
   color: #2A3141;
   margin-right: 2%;
   margin-bottom: 12px;
-  min-width: 21%;
+  min-width: 23%;
   display: inline-block;
   padding: 24px 24px 20px 20px;
   background-color: #F5F6F8;
@@ -1574,6 +1574,9 @@ br {
   vertical-align: middle;
   font-family: 'Sofia Pro', sans-serif;
   letter-spacing: -0.005em;
+}
+.tab-role .tab-wrap .tab-item:nth-of-type(4) {
+  margin-right: 0;
 }
 .tab-role .tab-wrap .active,
 .tab-role .tab-wrap .tab-item:hover {
@@ -1888,11 +1891,11 @@ br {
 }
 .company-about-status .block-column {
   display: inline-block;
-  width: 16em;
+  min-width: 240px;
   margin-top: 48px;
-  margin-right: 0.6em;
+  margin-right: 16px;
   padding-top: 0.4em;
-  padding-right: 0.8em;
+  padding-right: 16px;
   border-right: 1px solid #ECEDEF;
 }
 .company-about-status .block-column .icon {
@@ -1900,16 +1903,18 @@ br {
   height: 48px;
   margin-top: 0;
   margin-right: 0.2em;
-  float: left;
+  marginb-bottom: 0.3em;
 }
 .company-about-status .block-column .title {
   color: #2A3141;
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-weight: bold;
+  margin-bottom: -4px;
   font-family: 'Sofia Pro', sans-serif;
   letter-spacing: -0.005em;
 }
 .company-about-status .block-column .description {
+  color: #2A3141;
   font-size: 0.8em;
 }
 .company-about-status .block-column:last-of-type {
