--- a/embold-blue.com/css/index-steps.less
+++ b/embold-blue.com/css/index-steps.less
@@ -54,6 +54,17 @@
       .workflow-hover-effect;
     }
 
+    .workflow-1,
+    .workflow-2 {
+      .wrap-animation {
+        object {
+          width: 210px;
+          height: auto;
+          border-radius: 105px;
+        }
+      }
+    }
+
     .wrap-workflow {
       width: 100%;
       border-radius: 8px;
@@ -140,12 +151,12 @@
       .step-number {
         display: inline-block;
         color: @gray600;
-        width: 1.3em;
-        height: 1.3em;
-        font-size: 2.4em;
+        width: 1.6em;
+        height: 1.6em;
+        font-size: 2.1em;
         margin: 0.4em;
         font-weight: 300;
-        border-radius: 0.7em;
+        border-radius: 0.9em;
         .sofia;
         .transition;
       }
@@ -161,6 +172,7 @@
         visibility: hidden;
         color: @gray600;
         font-size: 0.9em;
+        line-height: 1.5;
         opacity: 0;
         .transition;
       }
@@ -169,7 +181,7 @@
     .index-arrow {
       width: 50px;
       height: 30px;
-      background-image: url('../images/index-arrow.svg');
+      background-image: url('../images/il-index-arrow.svg');
       background-size: 100% auto;
       background-repeat: no-repeat;
       position: absolute;
