--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -240,7 +240,7 @@ button:focus {
 
 * {
   box-sizing: border-box;
-  line-height: 1.8;
+  line-height: 1.5;
 }
 
 body {
@@ -716,7 +716,7 @@ br {
 
     .paragraph {
       color: @gray700;
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 300;
     }
 
@@ -742,6 +742,10 @@ br {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url('../images/photo-partnership-1.jpg');
+
+    .name {
+      color: @white;
+    }
   }
 
   .wrap-logo {
