--- a/css/meerkat.css
+++ b/css/meerkat.css
@@ -8,16 +8,16 @@ body {
   padding: 0;
 }
 .container {
-  width: 500px;
+  width: 450px;
   margin: 0 auto;
 }
 .container .title {
   color: #3b444d;
   margin-top: 32px;
   margin-bottom: 16px;
-  font-size: 53px;
+  font-size: 45px;
   font-weight: 700;
-  line-height: 1.3em;
+  line-height: 1.2em;
   letter-spacing: -0.04em;
 }
 .container h4 {
@@ -29,29 +29,29 @@ body {
 }
 .container .result-display {
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 450px;
+  height: 450px;
   border: 1px solid #e1e2e4;
 }
 .container .result-display .display-face {
   position: absolute;
   z-index: 30;
-  width: 500px;
-  height: 500px;
+  width: 450px;
+  height: 450px;
 }
 .container .result-display .display-body {
   position: absolute;
   z-index: 20;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  width: 500px;
-  height: 500px;
+  width: 450px;
+  height: 450px;
 }
 .container .result-display .display-text {
   position: absolute;
   z-index: 10;
-  width: 500px;
-  height: 500px;
+  width: 450px;
+  height: 450px;
 }
 .container .selector {
   display: inline-block;
@@ -99,6 +99,7 @@ body {
 }
 .container .block-btn {
   margin-bottom: 48px;
+  text-align: center;
 }
 .container .block-btn .btn-print {
   color: #fff;
@@ -111,6 +112,11 @@ body {
   font-family: "Sofia Pro";
   cursor: pointer;
   outline: none;
+  margin-bottom: 8px;
+}
+.container .block-btn a {
+  color: #000000;
+  text-decoration: underline;
 }
 .container .block-btn .btn-print:hover,
 .container .block-btn .btn-print:active {
@@ -137,4 +143,31 @@ body {
 }
 .body-4 {
   background-image: url('../svg/body-4.svg');
+}
+@media print {
+  body {
+    margin: 15mm !important;
+  }
+  .container {
+    margin: 0;
+  }
+  .result-display {
+    width: 89mm !important;
+    height: 54mm !important;
+  }
+  .result-display .display-face,
+  .result-display .display-body,
+  .result-display .display-text {
+    width: 89mm !important;
+    height: 54mm !important;
+    background-size: auto 100% !important;
+    background-position: center center !important;
+    background-repeat: no-repeat;
+  }
+  .title,
+  .selector-face,
+  .selector-body,
+  .block-btn {
+    display: none !important;
+  }
 }
