--- a/css/meerkat.less
+++ b/css/meerkat.less
@@ -100,6 +100,10 @@ body {
 		.btn-face-3 {
 			background-position: left -96px top 0;
 		}
+
+		.btn-face-4 {
+			background-position: left -144px top 0;
+		}
 	}
 
 	.selector-body {
@@ -169,6 +173,10 @@ body {
 
 .face-3 {
 	background-image: url('../svg/face-3.svg');
+}
+
+.face-4 {
+	background-image: url('../svg/face-4.svg');
 }
 
 .body-1 {
