--- a/css/embold.less
+++ b/css/embold.less
@@ -24,7 +24,8 @@ body {
   }
 }
 
-#repository-on {
+#repository-on,
+#repository-on-2 {
   display: none;
 }
 
@@ -46,7 +47,26 @@ body {
   top: 0;
   left: 0;
   position: absolute;
+}
 
+.progress-scan-2 {
+  color: #fff;
+  font-size: 10.5px;
+  font-weight: bold;
+  width: 100%;
+  height: 16px;
+  background-image:url('/img/image-progress-2.gif');
+  background-repeat: no-repeat;
+  background-size: 581px 16px;
+  background-position: -360px 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  padding-left: 16px;
+  border-radius: 6px 6px 0 0;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  position: absolute;
 }
 
 .click-area {
